🔧 chore(test): pre-push PMD 위반 20건 수정
- get(0) → getFirst() (Java 21 SequencedCollection API)
- StringBuilder 초기 크기 및 char 리터럴 수정
- 숫자 리터럴 언더스코어 추가 (1_000_000.0 등)
- ShortClassName(Save→SaveGrade), UseExplicitTypes(var→명시 타입)
- AvoidThrowingRawExceptionTypes → AssertionError 사용
- 동시성 테스트 @SuppressWarnings 추가
- 미사용 private 메서드 제거 (existingStock)
- ExecutorService 명시적 타입 + ExecutionException import 추가

SPEC: SPEC-COLLECTOR-GRADE-001